--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    implementation 'androidx.core:core-ktx:1.0.0-rc02'
 
     // Room
     implementation 'androidx.room:room-runtime:2.0.0-rc01'
     kapt 'androidx.room:room-compiler:2.0.0-rc01'
     implementation "android.arch.persistence.room:rxjava2:2.0.0-rc01"
+    implementation "android.arch.paging:runtime:2.0.0-rc01"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$versions.glide"
@@ -76,4 +78,11 @@ dependencies {
     // material
     implementation "com.google.android.material:material:$versions.material"
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha05'
+
+    // Calendar
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+
+    // Animation
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
 }
