--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 apply plugin: 'androidx.navigation.safeargs'
 
@@ -39,7 +40,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    implementation 'androidx.core:core-ktx:1.0.0-rc02'
+    implementation 'androidx.core:core-ktx:1.0.0'
+    kapt "androidx.databinding:databinding-compiler:3.3.0-alpha11"
 
     // ArchitectureComponents
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-rc01"
@@ -57,13 +59,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$versions.retrofit"
     implementation "com.squareup.okhttp3:okhttp:$versions.okhttp"
     implementation "com.squareup.okhttp3:logging-interceptor:$versions.okhttp"
-
-    // Parcel
-    implementation "nz.bradcampbell:paperparcel:$versions.parcel"
-    implementation "nz.bradcampbell:paperparcel-kotlin:$versions.parcel"
-
-    // Optional
-    kapt "nz.bradcampbell:paperparcel-compiler:$versions.parcel"
 
     // ThreeTenAbp
     implementation "com.jakewharton.threetenabp:threetenabp:$versions.three_ten_abp"
@@ -89,4 +84,7 @@ dependencies {
     // Animation
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
+    // Image Crop
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
 }
