--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.50'
+    ext.kotlin_version = '1.2.71'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha10'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.61"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha05"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha06"
     }
 
   ext {
@@ -38,7 +35,7 @@ buildscript {
       skeleton          : '1.1.1',
       shimmer           : '2.1.0',
       robolectric       : '3.8',
-      material          : '1.0.0-rc02'
+      material          : '1.0.0'
     ]
   }
 }
